--- a/src/assets/sass/js30/array-cardio-1.scss
+++ b/src/assets/sass/js30/array-cardio-1.scss
@@ -10,7 +10,7 @@
 }
 
 .d4__hr {
-    background: #333;;
+    background: #333;
     border: 0;
     display: block;
     height: 3px;
