--- a/src/assets/sass/js30/css-variables.scss
+++ b/src/assets/sass/js30/css-variables.scss
@@ -26,7 +26,7 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 10px;
-    z-index: 10;
+    z-index: 5;
 }
 
 .d3__img__string-1,
